--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="chrome.css">
 </head>
 <body>
-    <input type="text" id="input-el">
+<!--     <input type="text" id="input-el">
     <button id="btn-el">SAVE INPUT</button>
     <ul id="ul-el"></ul>
-    <script src="chrome.js"></script>
+    <script src="chrome.js"></script> -->
+    <h1>deepak</h1>
 </body>
 </html>
